# LiteSubtitler

./: .gitignore  README.md  pyproject.toml
docs/demo/: Moana.2016.md
resources/prompts/: 摘要.txt  翻译-精细意译.txt
src/: config.py  main.py  qrcode_builder.py
src/controller/: subtitles_controller.py
src/core/: base_object.py  work_thread.py
src/core/asr/: asr_data.py  asr_data_builder.py  asr_data_seg.py  base_asr.py  faster_whisper.py
src/core/audio/: audio_spliter.py  audio_tool.py
src/core/image/: image_tool.py
src/core/llm/: llm_translater.py  opanai_checker.py
src/core/srt/: srt_aligner.py  srt_segmentor.py
src/core/video/: ffmpeg_handler.py
src/enums/: base_enums.py  faster_whisper_enums.py  language_enums.py  supported_subtitle_enum.py  translate_mode_enum.py
src/service/: asr_service.py  audio_service.py  translate_service.py  video_service.py
src/task/: step_processor.py  task_obj.py  task_scheduler.py
src/ui/: base_config_facade.py  config_binder.py  dialog_generator.py  main_frm.py  main_frm.ui  main_frm_helper.py
src/ui/data/: array_table_model.py
src/ui/driver/: ai_chat_thread.py  gui_tool.py  image_embed_thread.py  subtitle_embed_thread.py
src/ui/facade/: about_fcd.py  image_embed_fcd.py  llm_checker_fcd.py  llm_prompter_fcd.py  main_fcd.py  main_frm_helper.py  setting_fcd.py  subtitle_embed_fcd.py
src/ui/gui/: about.py  about.ui  llm_checker_dlg.py  main_frm.py  main_frm.ui  setting_dlg.py  setting_dlg.ui  subtitle_embed_dlg.py  (+1 more)
src/utils/: common_utils.py  file_utils.py  path_utils.py  style_utils.py  uuid_utils.py
